# PA_Client-cocos2d-x-3.17.2

./: .cocos-project.json  .project  CMakeLists.txt  config.json
frameworks/cocos2d-x/cocos/: CMakeLists.txt
frameworks/cocos2d-x/cocos/libpomelo2/: Android.mk  CMakeLists.txt  libpomelo2.vcxproj  libpomelo2.vcxproj.filters  pomelo.sln  tr_dummy.vcxproj  tr_dummy.vcxproj.filters  tr_tcp.vcxproj  tr_tcp.vcxproj.filters  tr_tls.vcxproj  tr_tls.vcxproj.filters
frameworks/runtime-src/Classes/: AppDelegate.cpp  CCPomelo.cpp  CCPomelo.h  export.cpp  export.h
frameworks/runtime-src/Classes/include/: BaseClass.h  BaseData.h  Battle.h  Boss.h  Buff.h  BuffMgr.h  Bullet.h  BulletBase.h  BulletMgr.h  BulletNormal.h  ClientKernel.h  CommonData.h  Define.h  DownAsset.h  Enemy.h  EnergyBody.h  Event.h  Fort.h  FortMgr.h  FortSkill.h  InitialData.h  KeyFrame.h  MCKernel.h  MobileClientKernel.h  Player.h  Props.h  PropsMgr.h  Shape.h  Ship.h  ShipSkill.h  TimeTool.h  Tool.h  UnZipAsset.h  stdafx.h
frameworks/runtime-src/Classes/lua-bindings/: lua_pomelo_auto.cpp  lua_pomelo_auto.hpp
frameworks/runtime-src/Classes/src/: BaseClass.cpp  BaseData.cpp  Battle.cpp  Boss.cpp  Buff.cpp  BuffMgr.cpp  Bullet.cpp  BulletBase.cpp  BulletMgr.cpp  BulletNormal.cpp  ClientKernel.cpp  DownAsset.cpp  Enemy.cpp  EnergyBody.cpp  Fort.cpp  FortMgr.cpp  FortSkill.cpp  KeyFrame.cpp  MCKernel.cpp  MobileClientKernel.cpp  Player.cpp  Props.cpp  PropsMgr.cpp  Shape.cpp  Ship.cpp  ShipSkill.cpp  TimeTool.cpp  Tool.cpp  UnZipAsset.cpp  json_reader.cpp  json_value.cpp  stdafx.cpp
frameworks/runtime-src/proj.android/: build.gradle  gradle.properties  settings.gradle
frameworks/runtime-src/proj.android/app/: AndroidManifest.xml  build.gradle
frameworks/runtime-src/proj.ios_mac/PA_Client.xcodeproj/: project.pbxproj
frameworks/runtime-src/proj.ios_mac/ios/: AppController.mm  Info.plist
frameworks/runtime-src/proj.ios_mac/mac/: Icon.icns  Info.plist
frameworks/runtime-src/proj.win32/: PA_Client.sln  PA_Client.vcxproj
src/: config.lua  constant.lua  main.lua
src/app/: MyApp.lua
src/app/config/text/: text_en_US.lua  text_zh_CN.lua
src/app/constants/: NetworkConst.lua  achievement_task.lua  arms.lua  battle.lua  boss_data.lua  buf_desc.lua  buf_warship.lua  code.lua  code_map.lua  combat.lua  consts.lua  daily_rank_award.lua  damage_award.lua  day_task.lua  equipment.lua  exp_grow.lua  firstname.lua  forbidden_words.lua  fort.lua  fort_advance.lua  fort_advanced.lua  fort_exp.lua  fort_factor.lua  fort_list.lua  fort_skill.lua  fort_unlock.lua  fort_upgrade_item.lua  friend_gift.lua  item.lua  item_ex.lua  item_produce.lua  item_upgrade.lua  league_award.lua  league_build_desc.lua  league_contribute.lua  league_create.lua  league_upgrade_base.lua  league_upgrade_exchange.lua  league_upgrade_finance.lua  league_upgrade_research.lua  (+20 more)
src/app/data/: BattleDataMgr.lua  ChatDataMgr.lua  EscortDataMgr.lua  FortDataMgr.lua  FriendDataMgr.lua  GameData.lua  ItemDataMgr.lua  MailDataMgr.lua  NumCalculation.lua  ProduceDataMgr.lua  ProductDataMgr.lua  RevengeDataMgr.lua  ShipDataMgr.lua  UserDataMgr.lua  _GameData.lua  stringData.lua
src/app/pools/: Pool.lua  PoolManager.lua
src/app/scenes/: BattleScene.lua  DecomposeScene.lua  DemoBattlePreScene.lua  DomainScene.lua  EscortScene.lua  FriendScene.lua  GameSceneBase.lua  LeagueFightScene.lua  LeagueScene.lua  LoginScene.lua  LotteryScene.lua  MailScene.lua  MainScene.lua  PackageScene.lua  ProduceScene1.lua  ProduceScene2.lua  ResourceScene.lua  RevengeScene.lua  ShipScene.lua  ShopScene.lua  TaskScene.lua  WelcomeScene.lua  ZZTestScene.lua
src/app/utils/: BattleResourceMgr.lua  Crypto.lua  ResourceMgr.lua  UIDrag.lua  Utils.lua
src/app/views/: GameViewBase.lua
src/app/views/battle/: BulletMgr.lua  CBoss.lua  CCBBattle.lua  CCBBottom.lua  CCBEscortBattleLose.lua  CCBEscortBattleWin.lua  CCBFortState.lua  CCBShowDraw.lua  CCBShowLose.lua  CCBShowWin.lua  CCBTop.lua  CEnergyBody.lua  CFort.lua  CShip.lua  PropDescPop.lua  ShipMgr.lua  newEnergyBodyMgr.lua
src/app/views/chatView/: CCBChatView.lua
src/app/views/common/: BuffWordTips.lua  DescripProp.lua  FrameLayer.lua  ItemTips.lua  LoadingLayer.lua  MessageHint.lua  NumberTips.lua  PlayerLevelUp.lua  RankIcon.lua  RankUpView.lua  SpriteBlur.lua  Tips.lua  VersionLayer.lua  WaitMsg.lua
src/app/views/commonCCB/: CCBCommonGetPath.lua  CCBExchangeCoin.lua  CCBExchangeDiamond.lua  CCBHeadBar.lua  CCBMessageBox.lua  CCBReceiveItemCell.lua  CCBReceiveWindowPopup.lua  CCBTitlePanel.lua
src/app/views/debugView/: CCBDebugButton.lua  debugView.lua
src/app/views/decomposeView/: CCBDecomposeView.lua  DecomposeView.lua
src/app/views/domainBattleView/: CCBDescripProp.lua  CCBDomainBattleView.lua  CCBRewardProp.lua  DomainBattleView.lua
src/app/views/escortView/: CCBEscortLootBattle.lua  CCBEscortLootLog.lua  CCBEscortMerchantShipView.lua  CCBEscortResult.lua  CCBEscortView.lua  CCBLootSearchView.lua  EscortFloat.lua  EscortView.lua
src/app/views/exploreView/: CCBPlanetExplore.lua
src/app/views/friendView/: CCBAddFriendView.lua  CCBApplicationListCell.lua  CCBChatDialogbox.lua  CCBFriendListCell.lua  CCBFriendView.lua  CCBPresentListCell.lua  CCBRecommendListCell.lua  FriendView.lua  PresentIcon.lua  WishCell.lua
src/app/views/helpView/: CCBHelpView.lua
src/app/views/leagueActivity/: CCBCheckChairman.lua  CCBCheckMember.lua  CCBCheckSubChairman.lua  CCBLeagueActivity.lua  CCBLeagueApplyList.lua  CCBLeagueApplyListCell.lua  CCBLeagueDynamic.lua  CCBLeagueDynamicFightCell.lua  CCBLeagueDynamicList.lua  CCBLeagueDynamicMemberCell.lua  CCBLeagueInfoList.lua  CCBLeagueInfoListCell.lua  CCBMsgBox.lua
src/app/views/leagueFight/: CCBFightRecordList.lua  CCBFightRecordListCell.lua  CCBLeagueFight.lua  CCBRewardProp.lua  CCBRewardPropCell.lua  LeagueFight.lua
src/app/views/leagueView/: CCBBadgesGetPath.lua  CCBChangeBadge.lua  CCBChangeBadgeScroll.lua  (+17 more)
src/cocos/: init.lua
src/cocos/cocos2d/: Cocos2d.lua  functions.lua
src/cocos/cocosbuilder/: CCBLoader.lua
src/cocos/framework/: display.lua  init.lua
(+72 files in other folders)
